bullet collision complete

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,7 +15,7 @@ h1 {
 }
 
 canvas {
-    border: 5px solid brown;
+    // border: 5px solid brown;
     /* margin: auto;
     display: block; */
    
