--- a/src/index.scss
+++ b/src/index.scss
@@ -3,25 +3,29 @@ h1 {
     font-weight: bold;
 }
 
-#canvas-wrap {
+#board-canvas {
     position: relative;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 50px;
     display: block;
-    width: 700px;
+    border: 2.5px solid #49fb35;
 }
 
-canvas {
-    // border: 5px solid brown;
-    /* margin: auto;
-    display: block; */
-   
-}
 
 
 body {
-    background-color: #E5CEB5;
+    background-color: black; // #E5CEB5;
+}
+
+section {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+}
+
+#instructions, #score {
+    margin: auto;
+    padding: 10px;
+    color: white;
+    border: 2.5px solid #49fb35;
+    border-radius: 10%;
 }
