--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,12 @@
+body {
+    background-color: black; 
+    font-family: 'SF Atarian System', sans-serif;
+    font-family: 'SF Atarian System Extended', sans-serif;
+    font-size: 20px;
+}
+
 h1 {
+    padding-top: 20px;
     color: brown;
     font-weight: bold;
 }
@@ -8,43 +16,40 @@ h1 {
     display: block;
     border: 2.5px solid #49fb35;
     border-radius: 1%;
-    // box-shadow: 0 0 5px 0px #96cbe7;
+    box-shadow: 0 0 5px 0px #96cbe7;
 }
 
 #playerscore {
     font-size: 30px;
-    align-items: center;
 }
 
 #images {
     width: 20px;
     height: 20px;
-    align-items: center;
-    margin: auto;
-    padding: auto;
-}
-
-ul > div {
-    margin: 5px;
-}
-
-body {
-    background-color: black; 
-    font-family: 'SF Atarian System', sans-serif;
-    font-family: 'SF Atarian System Extended', sans-serif;
 }
 
 section {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: space-between;
     padding-top: 30px;
 }
 
 #instructions, #score {
     margin: auto;
     padding: 10px;
+    line-height: 1;
     color: white;
     border: 2.5px solid #49fb35;
     border-radius: 2%;
+    width: 400px;
+    text-align: center;
+}
+
+#score {
+    width: 350px;
+}
+
+li {
+    line-height: 1.5;
+    text-align: justify;
 }
