--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
 }
 
 h1 {
-    padding-top: 20px;
+    padding-top: 10px;
     color: brown;
     font-weight: bold;
 }
@@ -16,11 +16,13 @@ h1 {
     display: block;
     border: 2.5px solid #49fb35;
     border-radius: 1%;
-    box-shadow: 0 0 5px 0px #96cbe7;
+    box-shadow: 0 0 5px 1px #96cbe7;
 }
 
 #playerscore {
-    font-size: 30px;
+    font-size: 40px;
+    color: brown;
+
 }
 
 #images {
@@ -31,7 +33,6 @@ h1 {
 section {
     display: flex;
     justify-content: space-between;
-    padding-top: 30px;
 }
 
 #instructions, #score {
@@ -43,13 +44,37 @@ section {
     border-radius: 2%;
     width: 400px;
     text-align: center;
+    padding-top: 20px;
+
+    // color: brown;
 }
 
 #score {
     width: 350px;
 }
 
+#inst {
+    color: brown;
+    font-size: 25px;
+}
+
 li {
     line-height: 1.5;
-    text-align: justify;
+    text-align: left;
+}
+
+footer {
+    font-size: 10px;
+    text-align: center;
+
+}
+
+a > img {
+    width: 30px;
+    height: 30px;
+    // filter: brightness(2);
+    // border: 1px solid white;
+    border-radius: 25%;
+    background-color: white;
+    padding: 3px;
 }
