--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,11 @@ h1 {
     height: 20px;
 }
 
+#score img {
+    width: 20px;
+    height: 20px;
+}
+
 section {
     display: flex;
     justify-content: space-between;
